# alpagym

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  pyproject.toml
docs/: AUTOVLA_A100_4GPU_GRPO_2026_07_16.md  AUTOVLA_A100_PROFILES_2026_07_17.md  AUTOVLA_ALPAGYM_FIXES_2026_07_16.md  COT_TRAJECTORY_ALIGNMENT.md  ONBOARDING.md  SERVER_ALPAMAYO15_CLRL.md
install/: Dockerfile  build_image.sh  check_env.sh  check_nccl_p2p.py
scripts/: launch_cosmos_a100.sh  run_alpamayo_smoke.sh  run_alpamayo_wizard_only.sh  run_autovla_smoke.sh  run_cosmos_only.sh  run_wizard_only.sh  server_clrl.sh  start_ssh_tunnel.sh
scripts/cameras/: 3cam_1080.yaml  3cam_512.yaml
tests/: test_cosmos_smoke_e2e.py  test_pytest_collection_gate.py
