[project]
name = "alpagym-workspace"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = ["pytest", "ruff>=0.15.12", "ty>=0.0.33"]

[project.optional-dependencies]
plugins = ["alpagym-plugins"]

[tool.uv]
required-version = ">=0.10.0"
python-preference = "only-managed"
exclude-newer = "3 days"
# xformers is pulled in transitively by cosmos-rl[rl] -> vllm. It caps
# flash-attn at 2.8.2 while alpagym pins 2.8.3, which crashes the
# import chain (diffusers AutoencoderKL -> xformers flash attention)
# inside the alpagym container. cosmos-rl prints
# "xformers is not compatible with Cosmos-RL now, please uninstall it"
# at startup and AlpaGym does not use xformers fast attention.
override-dependencies = [
  "xformers ; sys_platform == 'never'",
  # alpamayo1-x-rl's pyproject pins cosmos-rl at 747d1bd. alpagym tracks
  # a newer revision (~88 commits ahead). Force the alpagym rev to avoid
  # a uv "conflicting URLs" error; cosmos-rl is fully backward-compatible
  # for the APIs alpamayo1-x-rl exercises.
  "cosmos-rl @ git+https://github.com/nvidia-cosmos/cosmos-rl.git@d2a2c57c4bd6496482bc42da19a59b4432705eda",
]
# Restrict resolution to Linux x86_64 (CUDA). alpagym pulls vllm + flash-attn +
# alpamayo1-x-rl which are Linux-only; resolving Windows/macOS splits fails.
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.workspace]
members = [
  "packages/host",
  "packages/plugins",
  "packages/runtime",
  "packages/alpasim_configs",
  "packages/policies/alpamayo_r1",
]

[tool.ty.environment]
python = ".venv"
root = [
  "packages/host/src",
  "packages/plugins/src",
  "packages/runtime/src",
  "packages/alpasim_configs/src",
  "packages/policies/alpamayo_r1/src",
]

[tool.ty.src]
include = ["packages", "tests"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
grouped-gemm = ["torch"]

[tool.uv.sources]
alpagym-alpamayo-r1 = { workspace = true }
alpagym-alpasim-configs = { workspace = true }
alpagym-host = { workspace = true }
alpagym-plugins = { workspace = true }
alpagym-runtime = { workspace = true }
alpamayo-r1 = { git = "https://github.com/NVlabs/alpamayo.git", rev = "4cda35d22bb257f0936ac272397627b9309ca211" }
# TODO: switch back to main once the ExpertModel upstream MR
# (NVlabs/alpamayo-recipes#thomast/expert_wrapper_file) merges; bump
# the rev intentionally rather than tracking a moving branch.
alpamayo-recipes = { git = "https://github.com/NVlabs/alpamayo-recipes.git", subdirectory = "src", rev = "4bc76779739461a028ee8bb9008bc4082a3328dd" }
alpasim-grpc = { git = "https://github.com/NVlabs/alpasim.git", subdirectory = "src/grpc", rev = "10cae1c2b943da72eabafad65df80f4e3c16d90d" }
cosmos-rl = { git = "https://github.com/nvidia-cosmos/cosmos-rl.git", rev = "d2a2c57c4bd6496482bc42da19a59b4432705eda" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.8cxx11abiTRUE-cp312-cp312-linux_x86_64.whl" }
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[tool.pytest.ini_options]
testpaths = [
  "packages/host",
  "packages/plugins",
  "packages/runtime",
  "packages/alpasim_configs",
  "packages/policies/alpamayo_r1",
  "tests",
]
# Real AlpaSim and NCCL e2e tests require local infrastructure and are opt-in.
addopts = "-m 'not alpasim_e2e and not nccl_e2e'"
markers = [
  "alpasim_e2e: real AlpaSim Wizard startup smoke; requires Docker/GPU/AlpaSim data",
  "nccl_e2e: real NCCL transport smoke; requires pynccl, NCCL libs, and a CUDA host",
]
